tests/tests/snapshots/golden__gen__python__crud-notes.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
Dockerfile
============================================================
FROM python:3.12-slim

WORKDIR /srv

COPY pyproject.toml ./
RUN pip install --no-cache-dir uv && uv pip install --system -r pyproject.toml

COPY app ./app

EXPOSE 8000
CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
============================================================
README.md
============================================================
# Notes

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `app/services/`, which is yours.

## Run

```sh
uv sync
uv run uvicorn app.main:app --reload
```

Or bring up the full stack (API, Postgres, Redis):

```sh
docker compose up --build
```

## Test & lint

```sh
uv run pytest
uv run ruff check .
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `app/main.py` | Application assembly | compiler |
| `app/api/` | HTTP routers (one per api) | compiler |
| `app/services/` | Business-logic handlers | **you** |
| `app/workers/` | Queue consumers and scheduled jobs | compiler |
| `app/config.py` | Environment-driven settings | compiler |

Requests to protected routes need a bearer token signed with
`JWT_SECRET` (default `change-me`, algorithm HS256).
============================================================
app/__init__.py
============================================================
"""Notes — generated by CIaC. Structure is compiler-owned;
business logic belongs in `app/services/`."""
============================================================
app/api/__init__.py
============================================================
"""HTTP routers."""
============================================================
app/api/note.py
============================================================
"""REST endpoints for the `Note` resource. Generated by CIaC."""

from fastapi import APIRouter, Depends, HTTPException, Query, status
from sqlalchemy.ext.asyncio import AsyncSession

from app.auth import require_auth
from app.cache import get_cache
from app.db import get_session
from app.models import NoteIn, NoteOut
from app.services.note_store import NoteStore

router = APIRouter(
    prefix="/notes",
    tags=["notes"],
    dependencies=[Depends(require_auth)],
)


def _store(
    session: AsyncSession = Depends(get_session),
) -> NoteStore:
    return NoteStore(
        session, cache=get_cache()
    )


@router.post("", status_code=status.HTTP_201_CREATED)
async def create_note(
    payload: NoteIn,
    store: NoteStore = Depends(_store),
) -> NoteOut:
    entity = await store.create(payload.data)
    return NoteOut(id=entity.id, data=entity.data)


@router.get("")
async def list_notes(
    limit: int = Query(100, ge=1),
    offset: int = Query(0, ge=0),
    store: NoteStore = Depends(_store),
) -> list[NoteOut]:
    entities = await store.list(limit=limit, offset=offset)
    return [NoteOut(id=e.id, data=e.data) for e in entities]


@router.get("/{entity_id}")
async def get_note(
    entity_id: str,
    store: NoteStore = Depends(_store),
) -> NoteOut:
    entity = await store.get(entity_id)
    if entity is None:
        raise HTTPException(status_code=status.HTTP_404_NOT_FOUND)
    return NoteOut(id=entity.id, data=entity.data)


@router.put("/{entity_id}")
async def update_note(
    entity_id: str,
    payload: NoteIn,
    store: NoteStore = Depends(_store),
) -> NoteOut:
    entity = await store.update(entity_id, payload.data)
    if entity is None:
        raise HTTPException(status_code=status.HTTP_404_NOT_FOUND)
    return NoteOut(id=entity.id, data=entity.data)


@router.delete("/{entity_id}", status_code=status.HTTP_204_NO_CONTENT)
async def delete_note(
    entity_id: str,
    store: NoteStore = Depends(_store),
) -> None:
    deleted = await store.delete(entity_id)
    if not deleted:
        raise HTTPException(status_code=status.HTTP_404_NOT_FOUND)
============================================================
app/auth.py
============================================================
"""JWT authentication. Generated by CIaC.

`Auth` pipeline steps become a FastAPI dependency that verifies the
bearer token and hands the verified claims to the route.
"""

from typing import Any

import jwt
from fastapi import Depends, HTTPException, status
from fastapi.security import HTTPAuthorizationCredentials, HTTPBearer

from app.config import get_settings

_bearer = HTTPBearer()


async def require_auth(
    credentials: HTTPAuthorizationCredentials = Depends(_bearer),
) -> dict[str, Any]:
    """Verifies the request's bearer token and returns its claims."""
    settings = get_settings()
    try:
        return jwt.decode(
            credentials.credentials,
            settings.jwt_secret,
            algorithms=[settings.jwt_algorithm],
        )
    except jwt.InvalidTokenError as exc:
        raise HTTPException(
            status_code=status.HTTP_401_UNAUTHORIZED,
            detail="invalid or expired token",
        ) from exc


def require_scope(scope: str):
    """Builds a dependency that verifies a JWT contains `scope`."""

    async def dependency(claims: dict[str, Any] = Depends(require_auth)) -> dict[str, Any]:
        scopes = claims.get("scope", claims.get("scp", ""))
        if isinstance(scopes, str):
            granted = set(scopes.split())
        elif isinstance(scopes, list):
            granted = {str(item) for item in scopes}
        else:
            granted = set()
        if scope not in granted:
            raise HTTPException(
                status_code=status.HTTP_403_FORBIDDEN,
                detail="missing required scope",
            )
        return claims

    return dependency
============================================================
app/cache.py
============================================================
"""Redis cache clients. Generated by CIaC.

Clients are created lazily and Redis only connects on first use, so
importing the app never requires a running cache. Each named `cache`
instance gets its own client.
"""

import redis.asyncio as redis

from app.config import get_settings


def _urls() -> dict[str, str]:
    settings = get_settings()
    return {
        "default": settings.redis_url,
    }


_clients: dict[str, redis.Redis] = {}


def get_cache(instance: str = "default") -> redis.Redis:
    if instance not in _clients:
        _clients[instance] = redis.Redis.from_url(
            _urls()[instance], decode_responses=True
        )
    return _clients[instance]
============================================================
app/config.py
============================================================
"""Runtime configuration for Notes. Generated by CIaC.

Every value can be overridden through the environment (or an `.env`
file): field names map to upper-cased variables, e.g. `DATABASE_URL`.
"""

from functools import lru_cache

from pydantic_settings import BaseSettings, SettingsConfigDict


class Settings(BaseSettings):
    """Environment-driven settings with development defaults."""

    model_config = SettingsConfigDict(env_file=".env", extra="ignore")

    database_url: str = "postgresql+asyncpg://postgres:postgres@localhost:5432/notes"

    redis_url: str = "redis://localhost:6379/0"

    jwt_secret: str = "change-me"
    jwt_algorithm: str = "HS256"


@lru_cache
def get_settings() -> Settings:
    return Settings()
============================================================
app/db.py
============================================================
"""Async database access (SQLAlchemy + asyncpg). Generated by CIaC.

Engines are created lazily so importing the app never requires a running
database. Each named `db` instance from the `use { .. }` block gets its
own engine, sessionmaker, and FastAPI dependency.
"""

from collections.abc import AsyncIterator

from sqlalchemy.ext.asyncio import (
    AsyncEngine,
    AsyncSession,
    async_sessionmaker,
    create_async_engine,
)
from sqlalchemy.orm import DeclarativeBase

from app.config import get_settings


class Base(DeclarativeBase):
    """Declarative base for all models."""


def _urls() -> dict[str, str]:
    settings = get_settings()
    return {
        "default": settings.database_url,
    }


_engines: dict[str, AsyncEngine] = {}
_sessionmakers: dict[str, async_sessionmaker[AsyncSession]] = {}


def get_engine(instance: str = "default") -> AsyncEngine:
    if instance not in _engines:
        _engines[instance] = create_async_engine(_urls()[instance])
    return _engines[instance]


def get_sessionmaker(instance: str = "default") -> async_sessionmaker[AsyncSession]:
    if instance not in _sessionmakers:
        _sessionmakers[instance] = async_sessionmaker(
            get_engine(instance), expire_on_commit=False
        )
    return _sessionmakers[instance]


async def get_session() -> AsyncIterator[AsyncSession]:
    """FastAPI dependency yielding one `default` session per request."""
    async with get_sessionmaker("default")() as session:
        yield session


async def create_schema(instance: str = "default") -> None:
    """Creates all tables on startup.

    Replace with real migrations (e.g. Alembic) once the schema needs to
    evolve in production.
    """
    from app import models  # noqa: F401  (registers models on Base)


    async with get_engine(instance).begin() as conn:
        await conn.run_sync(Base.metadata.create_all)
============================================================
app/main.py
============================================================
"""Application assembly for Notes. Generated by CIaC."""

from collections.abc import AsyncIterator
from contextlib import asynccontextmanager

from fastapi import FastAPI

from app.api.note import router as note_router


@asynccontextmanager
async def lifespan(_: FastAPI) -> AsyncIterator[None]:
    from app.db import create_schema
    await create_schema()
    yield


app = FastAPI(title="Notes", lifespan=lifespan)


@app.get("/health")
async def health() -> dict[str, str]:
    return {"status": "ok"}


app.include_router(note_router)
============================================================
app/models.py
============================================================
"""Persistence models and API schemas for CRUD resources. Generated by CIaC.

Typed resources (`crud X: Record;`) get real columns from their record;
untyped ones keep a generic keyed-document model (UUID key + JSON
payload). Enums are stored as text.
"""


from typing import Any

from pydantic import BaseModel, Field
from sqlalchemy import JSON, String
from sqlalchemy.orm import Mapped, mapped_column

from app.db import Base



class Note(Base):
    __tablename__ = "notes"

    id: Mapped[str] = mapped_column(String(36), primary_key=True)
    data: Mapped[dict[str, Any]] = mapped_column(JSON, default=dict)


class NoteIn(BaseModel):
    """Payload for creating or updating a Note."""

    data: dict[str, Any] = Field(default_factory=dict)


class NoteOut(BaseModel):
    id: str
    data: dict[str, Any]

============================================================
app/services/__init__.py
============================================================
"""Business-logic handlers. This is where your code goes."""
============================================================
app/services/note_store.py
============================================================
"""Persistence for the `Note` resource. Generated by CIaC."""

import json
import uuid
from typing import Any


from redis.asyncio import Redis
from sqlalchemy import select
from sqlalchemy.ext.asyncio import AsyncSession

from app.models import Note


class NoteStore:
    """CRUD operations for Note with read-through caching."""

    def __init__(
        self,
        session: AsyncSession,
        cache: Redis | None = None,
    ) -> None:
        self.session = session
        self.cache = cache

    async def create(self, payload: dict[str, Any]) -> Note:
        entity = Note(id=str(uuid.uuid4()), data=payload)
        self.session.add(entity)
        await self.session.commit()
        return entity

    async def get(self, entity_id: str) -> Note | None:
        if self.cache is not None:
            cached = await self.cache.get(self._key(entity_id))
            if cached is not None:
                return Note(id=entity_id, data=json.loads(cached))
        entity = await self.session.get(Note, entity_id)
        if entity is not None and self.cache is not None:
            await self.cache.set(self._key(entity_id), json.dumps(self._payload(entity)), ex=300)
        return entity

    async def list(self, limit: int = 100, offset: int = 0) -> list[Note]:
        result = await self.session.scalars(select(Note).limit(limit).offset(offset))
        return list(result)

    async def update(self, entity_id: str, payload: dict[str, Any]) -> Note | None:
        entity = await self.session.get(Note, entity_id)
        if entity is None:
            return None
        entity.data = payload
        await self.session.commit()
        if self.cache is not None:
            await self.cache.delete(self._key(entity_id))
        return entity

    async def delete(self, entity_id: str) -> bool:
        entity = await self.session.get(Note, entity_id)
        if entity is None:
            return False
        await self.session.delete(entity)
        await self.session.commit()
        if self.cache is not None:
            await self.cache.delete(self._key(entity_id))
        return True

    def _key(self, entity_id: str) -> str:
        return "notes:" + entity_id

    @staticmethod
    def _payload(entity: Note) -> dict:
        return entity.data
============================================================
conftest.py
============================================================
"""Pytest configuration. Generated by CIaC."""

import pytest


@pytest.fixture
def anyio_backend() -> str:
    return "asyncio"
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    environment:
      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/notes
      REDIS_URL: redis://cache:6379/0
      JWT_SECRET: ${JWT_SECRET:-change-me}
    depends_on:
      - db
      - cache

  db:
    image: postgres:16
    environment:
      POSTGRES_PASSWORD: postgres
      POSTGRES_DB: notes
    volumes:
      - db-data:/var/lib/postgresql/data

  cache:
    image: redis:7

volumes:
  db-data:
============================================================
pyproject.toml
============================================================
[project]
name = "notes"
version = "0.1.0"
description = "Generated by CIaC from `service Notes`"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pyjwt>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.4",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
============================================================
tests/test_smoke.py
============================================================
"""Smoke tests generated by CIaC.

These run without any infrastructure: clients are lazy and the ASGI
transport below does not trigger the startup lifespan.
"""

import httpx
import pytest

from app.main import app


def _client() -> httpx.AsyncClient:
    transport = httpx.ASGITransport(app=app)
    return httpx.AsyncClient(transport=transport, base_url="http://test")


def test_routes_registered() -> None:
    paths = set(app.openapi()["paths"])
    assert "/notes" in paths
    assert "/health" in paths


@pytest.mark.anyio
async def test_health() -> None:
    async with _client() as client:
        response = await client.get("/health")
    assert response.status_code == 200
    assert response.json() == {"status": "ok"}


@pytest.mark.anyio
async def test_notes_require_auth() -> None:
    async with _client() as client:
        response = await client.get("/notes")
    assert response.status_code in (401, 403)
