tests/tests/snapshots/golden__gen__python__event-pipeline.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
Dockerfile
============================================================
FROM python:3.12-slim

WORKDIR /srv

COPY pyproject.toml ./
RUN pip install --no-cache-dir uv && uv pip install --system -r pyproject.toml

COPY app ./app

EXPOSE 8000
CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
============================================================
README.md
============================================================
# Ingest

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `app/services/`, which is yours.

## Run

```sh
uv sync
uv run uvicorn app.main:app --reload
```

Workers and scheduled jobs run separately:

```sh
uv run python -m app.workers
```

Or bring up the full stack (API, workers/jobs, Postgres, NATS):

```sh
docker compose up --build
```

## Test & lint

```sh
uv run pytest
uv run ruff check .
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `app/main.py` | Application assembly | compiler |
| `app/api/` | HTTP routers (one per api) | compiler |
| `app/services/` | Business-logic handlers | **you** |
| `app/workers/` | Queue consumers and scheduled jobs | compiler |
| `app/config.py` | Environment-driven settings | compiler |
============================================================
app/__init__.py
============================================================
"""Ingest — generated by CIaC. Structure is compiler-owned;
business logic belongs in `app/services/`."""
============================================================
app/api/__init__.py
============================================================
"""HTTP routers."""
============================================================
app/api/submit.py
============================================================
"""Request pipeline for `api Submit`. Generated by CIaC.

Pipeline: Validate -> publish ingest.events -> Return
"""

from typing import Any

from fastapi import APIRouter, Depends
from sqlalchemy.ext.asyncio import AsyncSession

from app.db import get_session
from app.queue import publish
from app.services.validate import Validate

router = APIRouter()


@router.post("/submit")
async def submit(
    payload: dict[str, Any],
    session: AsyncSession = Depends(get_session),
) -> dict[str, Any]:
    result: dict[str, Any] = dict(payload)

    result = await Validate(session=session).handle(result)
    await publish("ingest.events", result)
    return {"status": "accepted", "data": result}
============================================================
app/config.py
============================================================
"""Runtime configuration for Ingest. Generated by CIaC.

Every value can be overridden through the environment (or an `.env`
file): field names map to upper-cased variables, e.g. `DATABASE_URL`.
"""

from functools import lru_cache

from pydantic_settings import BaseSettings, SettingsConfigDict


class Settings(BaseSettings):
    """Environment-driven settings with development defaults."""

    model_config = SettingsConfigDict(env_file=".env", extra="ignore")

    database_url: str = "postgresql+asyncpg://postgres:postgres@localhost:5432/ingest"
    nats_url: str = "nats://localhost:4222"


@lru_cache
def get_settings() -> Settings:
    return Settings()
============================================================
app/db.py
============================================================
"""Async database access (SQLAlchemy + asyncpg). Generated by CIaC.

Engines are created lazily so importing the app never requires a running
database. Each named `db` instance from the `use { .. }` block gets its
own engine, sessionmaker, and FastAPI dependency.
"""

from collections.abc import AsyncIterator

from sqlalchemy.ext.asyncio import (
    AsyncEngine,
    AsyncSession,
    async_sessionmaker,
    create_async_engine,
)
from sqlalchemy.orm import DeclarativeBase

from app.config import get_settings


class Base(DeclarativeBase):
    """Declarative base for all models."""


def _urls() -> dict[str, str]:
    settings = get_settings()
    return {
        "default": settings.database_url,
    }


_engines: dict[str, AsyncEngine] = {}
_sessionmakers: dict[str, async_sessionmaker[AsyncSession]] = {}


def get_engine(instance: str = "default") -> AsyncEngine:
    if instance not in _engines:
        url = _urls()[instance]
        _engines[instance] = create_async_engine(url)
    return _engines[instance]


def get_sessionmaker(instance: str = "default") -> async_sessionmaker[AsyncSession]:
    if instance not in _sessionmakers:
        _sessionmakers[instance] = async_sessionmaker(
            get_engine(instance), expire_on_commit=False
        )
    return _sessionmakers[instance]


async def get_session() -> AsyncIterator[AsyncSession]:
    """FastAPI dependency yielding one `default` session per request."""
    async with get_sessionmaker("default")() as session:
        yield session


async def create_schema(instance: str = "default") -> None:
    """Creates CRUD-resource tables on startup. `table` declarations
    (v0.7) are provisioned by `run_migrations` instead, since they carry
    real incremental migrations rather than a create-if-absent call.
    """
    return

============================================================
app/main.py
============================================================
"""Application assembly for Ingest. Generated by CIaC."""

from collections.abc import AsyncIterator
from contextlib import asynccontextmanager

from fastapi import FastAPI

from app.api.submit import router as submit_router


@asynccontextmanager
async def lifespan(_: FastAPI) -> AsyncIterator[None]:
    from app.db import create_schema
    await create_schema()
    yield


app = FastAPI(title="Ingest", lifespan=lifespan)


@app.get("/health")
async def health() -> dict[str, str]:
    return {"status": "ok"}


app.include_router(submit_router)
============================================================
app/queue.py
============================================================
"""NATS queue access. Generated by CIaC.

`publish` pipeline steps send JSON payloads to their stream's subject;
workers consume their bound stream in per-worker queue groups (see
`app/workers/`). The connection is established lazily on first publish.
"""

import json
from typing import Any

import nats
from nats.aio.client import Client

from app.config import get_settings

_client: Client | None = None


async def get_client() -> Client:
    global _client
    if _client is None or _client.is_closed:
        _client = await nats.connect(get_settings().nats_url)
    return _client


async def publish(subject: str, payload: dict[str, Any]) -> None:
    client = await get_client()
    await client.publish(subject, json.dumps(payload).encode())
============================================================
app/services/__init__.py
============================================================
"""Business-logic handlers. This is where your code goes."""
============================================================
app/services/enrich.py
============================================================
"""Handler for the `Enrich` pipeline step. Generated by CIaC.

This file is yours: the compiler wires `Enrich` into its
pipelines, and you implement the business logic in `handle`.
"""

from typing import Any
from sqlalchemy.ext.asyncio import AsyncSession



class Enrich:
    """Business logic for the `Enrich` step.

    Capability bindings:
    - db: default
    """

    def __init__(
        self,
        session: AsyncSession | None = None,
    ) -> None:
        self.session = session

    async def handle(self, payload: dict[str, Any]) -> dict[str, Any]:
        # TODO: implement the Enrich step.
        return payload
============================================================
app/services/store.py
============================================================
"""Handler for the `Store` pipeline step. Generated by CIaC.

This file is yours: the compiler wires `Store` into its
pipelines, and you implement the business logic in `handle`.
"""

from typing import Any
from sqlalchemy.ext.asyncio import AsyncSession



class Store:
    """Business logic for the `Store` step.

    Capability bindings:
    - db: default
    """

    def __init__(
        self,
        session: AsyncSession | None = None,
    ) -> None:
        self.session = session

    async def handle(self, payload: dict[str, Any]) -> dict[str, Any]:
        # TODO: implement the Store step.
        return payload
============================================================
app/services/validate.py
============================================================
"""Handler for the `Validate` pipeline step. Generated by CIaC.

This file is yours: the compiler wires `Validate` into its
pipelines, and you implement the business logic in `handle`.
"""

from typing import Any
from sqlalchemy.ext.asyncio import AsyncSession



class Validate:
    """Business logic for the `Validate` step.

    Capability bindings:
    - db: default
    """

    def __init__(
        self,
        session: AsyncSession | None = None,
    ) -> None:
        self.session = session

    async def handle(self, payload: dict[str, Any]) -> dict[str, Any]:
        # TODO: implement the Validate step.
        return payload
============================================================
app/workers/__init__.py
============================================================
"""Queue-driven workers and scheduled jobs. Run them all with `python -m app.workers`."""
============================================================
app/workers/__main__.py
============================================================
"""Runs every worker in one process: `python -m app.workers`. Generated by CIaC."""

import asyncio

from app.workers import (
    processor,
    page_view_consumer,
)


async def main() -> None:
    await asyncio.gather(
        processor.run(),
        page_view_consumer.run(),
    )


if __name__ == "__main__":
    asyncio.run(main())
============================================================
app/workers/page_view_consumer.py
============================================================
"""Event consumer for `events PageViewConsumer`. Generated by CIaC.

Consumes `ingest.page_view` in queue group `page_view_consumer`.
"""

import json
from typing import Any
import nats

from app.config import get_settings
from app.db import get_sessionmaker

SUBJECT = "ingest.page_view"
QUEUE_GROUP = "page_view_consumer"


async def handle_event(payload: dict[str, Any]) -> None:
    async with get_sessionmaker()() as session:
        _ = session
        _ = payload  # TODO: persist or process the PageViewConsumer event.


async def run() -> None:
    """Subscribes and processes events forever."""
    client = await nats.connect(get_settings().nats_url)
    subscription = await client.subscribe(SUBJECT, queue=QUEUE_GROUP)
    async for message in subscription.messages:
        await handle_event(json.loads(message.data))
============================================================
app/workers/processor.py
============================================================
"""Worker pipeline for `worker Processor`. Generated by CIaC.

Consumes `ingest.events` in queue group `processor`
so replicas of this worker load-balance messages between them.
"""

import asyncio
import logging
import json
from typing import Any


import nats

from app.config import get_settings
from app.db import get_sessionmaker
from app.services.enrich import Enrich
from app.services.store import Store

SUBJECT = "ingest.events"
QUEUE_GROUP = "processor"
CONCURRENCY = 1
MAX_RETRIES = 0
logger = logging.getLogger(__name__)



async def handle_message_once(payload: dict[str, Any]) -> None:
    result = dict(payload)
    async with get_sessionmaker()() as session:

        result = await Enrich(session=session).handle(result)
        result = await Store(session=session).handle(result)


async def handle_message(payload: dict[str, Any]) -> None:
    for attempt in range(MAX_RETRIES + 1):
        try:
            await handle_message_once(payload)
            return
        except Exception:
            if attempt >= MAX_RETRIES:
                logger.exception("message processing failed after retries")
                return
            logger.warning("message processing failed; retrying", exc_info=True)


async def _consume(worker_index: int) -> None:
    client = await nats.connect(get_settings().nats_url)
    subscription = await client.subscribe(SUBJECT, queue=QUEUE_GROUP)
    logger.info("worker Processor consumer %s subscribed", worker_index)
    async for message in subscription.messages:
        await handle_message(json.loads(message.data))


async def run() -> None:
    """Subscribes and processes messages forever."""
    await asyncio.gather(*(_consume(idx) for idx in range(CONCURRENCY)))
============================================================
conftest.py
============================================================
"""Pytest configuration. Generated by CIaC."""

import pytest


@pytest.fixture
def anyio_backend() -> str:
    return "asyncio"
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "bash", "-c", "exec 3<>/dev/tcp/127.0.0.1/8000"]
      interval: 1s
      timeout: 3s
      retries: 30
    environment:
      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/ingest
      NATS_URL: nats://queue:4222
    depends_on:
      db:
        condition: service_healthy
      queue:
        condition: service_started

  workers:
    build: .
    command: ["python", "-m", "app.workers"]
    environment:
      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/ingest
      NATS_URL: nats://queue:4222
    depends_on:
      db:
        condition: service_healthy
      queue:
        condition: service_started

  db:
    image: postgres:16
    ports:
      - "5432:5432"
    environment:
      POSTGRES_PASSWORD: postgres
      POSTGRES_DB: ingest
    volumes:
      - db-data:/var/lib/postgresql/data
    healthcheck:
      test: ["CMD-SHELL", "pg_isready -U postgres"]
      interval: 2s
      timeout: 3s
      retries: 20

  queue:
    image: nats:2
    # Host mapping (v0.13 M2): the generated tests/system delivery and
    # channel tests connect from the host at localhost:4222.
    ports:
      - "4222:4222"

volumes:
  db-data:
============================================================
pyproject.toml
============================================================
[project]
name = "ingest"
version = "0.1.0"
description = "Generated by CIaC from `service Ingest`"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "nats-py>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.4",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# tests/system/ needs the compose stack up and is run only by
# `ciac verify --system` (from its own directory); plain `pytest`
# must never collect it.
norecursedirs = ["tests/system"]

[tool.ruff]
target-version = "py311"
============================================================
tests/test_smoke.py
============================================================
"""Smoke tests generated by CIaC.

These run without any infrastructure: clients are lazy and the ASGI
transport below does not trigger the startup lifespan.
"""

import httpx
import pytest

from app.main import app


def _client() -> httpx.AsyncClient:
    transport = httpx.ASGITransport(app=app)
    return httpx.AsyncClient(transport=transport, base_url="http://test")


def test_routes_registered() -> None:
    paths = set(app.openapi()["paths"])
    assert "/submit" in paths
    assert "/health" in paths


@pytest.mark.anyio
async def test_health() -> None:
    async with _client() as client:
        response = await client.get("/health")
    assert response.status_code == 200
    assert response.json() == {"status": "ok"}
